--- a/main.html
+++ b/main.html
@@ -170,29 +170,64 @@
         </div>
         <!--Footer-->
         <div class="footer">
-            <div class="newsletter">
-                <h4>To recieve special offers and updates about new book additions, put down your email below</h4>
-                <input type="email" name="email" id="#">
-                <input type="button" value="Submit">
+            <div class="logo">
+            <img src="#" alt="Logo">
+            <h6>Subscribe to newsletter hear!</h6>
+            <input type="email">
+            <input type="button" value="Submit">
             </div>
-            <h5>You can reach out to us at: bookaasan@gmail.com</h3>
-            <div class="socials">
-                <a href="#">instagram</a>
-                <a href="#">twitter</a>
-                <a href="#">facebook</a>
-            </div>
-            <div class="sitemap">
+            <div class="ft">
+                <h7>COMMUNITY</h7>
                 <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Submit an issue</a></li>
+                    <li><a href="#">Github Repo</a></li>
+                    <li><a href="#">Slack</a></li>
                 </ul>
-            </div>
-            <hr>
-            <h5>Copyright &copy; BookAasan 2023</h5>
+                </div>
+        <div class="ft">
+                <h7>GETTING STARTED</h7>
+                <ul>
+                    <li><a href="#">Introduction</a></li>
+                    <li><a href="#">Docomentation</a></li>
+                    <li><a href="#">Usage</a></li>
+                    <li><a href="#">Globals</a></li>
+                    <li><a href="#">Elements</a></li>
+                    <li><a href="#">Collections</a></li>
+                    <li><a href="#">Themes</a></li>
+                </ul>
+        </div>
+            <div class="ft">
+                <h7> RESOURCES</h7>
+                <ul>
+                    <li><a href="#">API</a></li>
+                    <li><a href="#">From Validation Product</a></li>
+                    <li><a href="#">Visibility</a></li>
+                    <li><a href="#">Accessibility</a></li>
+                    <li><a href="">Community</a></li>
+                    <li><a href="#">Design Defined</a></li>
+                    <li><a href="#">Marketplace</a></li>
+                </ul>
+                </div>
+            </div> 
+        </div>
+            <div class="footer2">
+                <p>&copy 2023 Bookaasan All rights reserved</p>
+                <ul>
+                    <li><a href="#">Terms of service</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Security</a></li>
+                    <li><a href="#">Sitemap</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">tw</a></li>
+                    <li><a href="#">git</a></li>
+                    <li><a href="#">FB</a></li>
+                    <li><a href="#">insta</a></li>
+                </ul>
+            </div> 
         </div>
     </div>
+    
 </body>
 </html>
